# cliconf

./: CMakeLists.txt  README-library.md  README.md  pixi.toml
benches/: CMakeLists.txt  bench_json.cpp
cmake/: CTestCustom.cmake.in  cliconfConfig.cmake.in  dependencies-app.cmake  dependencies-test.cmake  local-or-fetch.cmake  quality-tools.cmake  sanitizer-flags.cmake  template_cli_app_cppConfig.cmake.in
docs/: build-system.md  config-system-guide.md  config-system-internals.md  config-system-porting.md  config-system.md  csv-system-guide.md
examples/: CMakeLists.txt  example_compat.cpp  example_csv_wrapper.cpp  example_json_wrapper.cpp  example_output.cpp
include/cliconf/: field_descriptor.hpp
include/cliconf/compat/: expected.hpp  span.hpp
include/cliconf/utility/: csv_wrapper.hpp
include/config/: config_file_loader.hpp  config_manager.hpp  config_schema.hpp
include/template_cli_app_cpp/utility/: csv_wrapper.hpp
src/: CMakeLists.txt
src/command/: CMakeLists.txt  cli.cpp
src/config/: CMakeLists.txt  config_file_loader.cpp  config_file_loader.hpp  config_manager.cpp  config_schema.hpp  config_validator.cpp  config_validator.hpp
tests/: CMakeLists.txt  test_config_manager.cpp  test_csv_wrapper.cpp  test_yyjson_wrapper.cpp
tests/fixtures/: base.toml  multi.conf  override.toml
